	  libpurple package depend on the CA certificates.

	Pidgin:
	* Custom buddy icons can now be added to and removed from buddy list
	  entries via the buddy list entry right-click menu.
	* Resize large incoming custom smileys to a maximum of 96px on either
	  side.
	* Offer to add new buddies into the same contact as existing buddies
          in the same group if the alias given is the same.

	General:
	* Group and Chat buddy list entries can now be given custom buddy
	  icons.

	Finch:
	* Added "Invite..." menu to chats.
	* Added "View All Logs" menu in the buddylist to display a list of all IM
	  logs.
	* Added '/msgcolor' command to change colors of different classes of
	  messages in a conversation. See '/help msgcolor' for details.

version 2.4.3 (07/01/2008):
	libpurple:
	* Yahoo! Japan now uses UTF-8, matching the behavior of official clients
	  and restoring compatibility with the web messenger (Yusuke Odate)
	* Setting your buddy icon once again works for Yahoo! accounts.
	* Fixes in the Yahoo! protocol to prevent a double free, crashes on
	  aliases, and alias functionality
	* Fix crashes in the bonjour protocol
	* Always use UTF-8 for Yahoo! (#5973)
	* Fix a crash when the given jabber id is invalid.
	* Make the IRC "unknown message" debugging messages UTF-8 safe.
	* Fix connecting to ICQ
	* Fix a memleak when handling jabber xforms.

	Pidgin:
	* Include the send button plugin in the win32 build
	* Various memory leak fixes

version 2.4.2 (05/17/2008):
	libpurple:
	* In MySpaceIM, messages from spambots are discarded (Justin Williams)
	* Strip mIRC formatting codes from quit and part messages.
	* IRC now displays ban lists in-channel for joined channels.
	* Fixed a bug where the list of loaded plugins would get removed when
	  switching between different operating systems.
	* Fix reception of IRC PART without a part message on Undernet
	  (fixes a problem with litter in the channel user list).